searchbar left padding issue resolved | searchbar and text aligned as per component above tthem

--- a/core/templates/css/oppia.css
+++ b/core/templates/css/oppia.css
@@ -806,9 +806,7 @@ textarea {
   padding: 0;
   width: 100%;
 }
-.navbar-form {
-  padding-left: 15px;
-}
+
 
 .nav {
   list-style: none;
