--- a/core/templates/pages/classroom-page/classroom-page.component.css
+++ b/core/templates/pages/classroom-page/classroom-page.component.css
@@ -40,7 +40,8 @@
 
 .oppia-classroom-viewer-container,
 .oppia-classroom-search-section {
-  display: block;
+  display: grid;
+  justify-content: center;
   margin-left: auto;
   margin-right: auto;
   width: 75vw;
@@ -115,11 +116,6 @@ classroom-page .oppia-classroom-page-subheading-text {
   font-size: 1em;
 }
 
-.oppia-classroom-search-bar-container {
-  display: flex;
-  justify-content: center;
-}
-
 @media(max-width: 1150px) {
   .oppia-topic-summary-tiles {
     margin-bottom: 55px;
@@ -132,11 +128,6 @@ classroom-page .oppia-classroom-page-subheading-text {
   .oppia-classroom-viewer-container,
   .oppia-classroom-search-section {
     width: 75vw;
-  }
-
-  .oppia-classroom-search-container {
-    margin-bottom: -54px;
-    margin-left: -12.5vw;
   }
 }
 
@@ -155,6 +146,11 @@ classroom-page .oppia-classroom-page-subheading-text {
   .oppia-classroom-search-section {
     text-align: center;
     width: 95vw;
+  }
+
+  .oppia-classroom-search-bar-container {
+    display: flex;
+    justify-content: center;
   }
 
   .oppia-classroom-search-container {
