--- a/core/templates/pages/library-page/search-bar/search-bar.component.css
+++ b/core/templates/pages/library-page/search-bar/search-bar.component.css
@@ -19,9 +19,6 @@ oppia-search-bar .navbar-fixed-bottom .dropdown .dropdown-menu {
   height: 35px;
 }
 
-oppia-search-bar .navbar-form {
-  padding-left: 15px;
-}
 
 oppia-search-bar .oppia-same-row-container {
   float: left;
